add category form

--- a/01. Flashcards/src/index.css
+++ b/01. Flashcards/src/index.css
@@ -1,1 +1,17 @@
 @import "tailwindcss";
+
+
+/* styles.css */
+.scrollbar-custom::-webkit-scrollbar {
+    @apply w-2
+  }
+  .scrollbar-custom::-webkit-scrollbar-track {
+    @apply bg-gray-900;
+  }
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    @apply bg-gray-800 rounded-xl;
+  }
+  .scrollbar-custom::-webkit-scrollbar-thumb:hover {
+    @apply opacity-50;
+  }
+  
